adicionado campo de email e grupo familiar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <input type="text" placeholder="Nome" required id="nome">
             <label for="telefone">TEL: </label>
             <input type="tel" placeholder="Telefone" required id="telefone">
+            <label for="email">Email: </label>
+            <input type="email" id="email" placeholder="Email (Opicional)">
+            <label for="proximidade">Grupo: </label>
+            <input type="text" id="grupo" placeholder="Ex:(Mãe)">
             <button type="submit">Adicionar</button>
         </form>
         
@@ -24,10 +28,14 @@
                 <tr>
                     <th>Nome</th>
                     <th>Telefone</th>
+                    <th>Email</th>
+                    <th>Grupo</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <th></th>
+                    <th></th>
                     <th></th>
                     <th></th>
                 </tr>
